# SrtPtt

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/jiangc/srtptt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jiangc/srtptt/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jiangc/srtptt/: ExampleUnitTest.java
libavcodec/: build.gradle.kts
libavcodec/libs/arm64-v8a/pkgconfig/: srt.pc
libavcodec/libs/armeabi-v7a/pkgconfig/: haisrt.pc
libavcodec/libs/x86/pkgconfig/: srt.pc
libavcodec/libs/x86_64/pkgconfig/: srt.pc
libavcodec/src/androidTest/java/com/jiangc/libavcodec/: ExampleInstrumentedTest.java
libavcodec/src/main/: AndroidManifest.xml
libavcodec/src/main/cpp/: CMakeLists.txt
libavcodec/src/main/cpp/include/: audio.h
libavcodec/src/main/cpp/src/: RecordBuffer.cpp  RecordBuffer.h  audio.cpp  native-lib.cpp
libavcodec/src/main/java/com/jiangc/libavcodec/: AvCodecManager.java
libavcodec/src/test/java/com/jiangc/libavcodec/: ExampleUnitTest.java
